# OpenGL-Start

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.ccls-cache/@@Users@carlobonandrini@develop@OpenGL-Start/: @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AssertMacros.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@Availability.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityInternal.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityMacros.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@Block.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@ConditionalMacros.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@MacTypes.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@TargetConditionals.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@__wctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_locale.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_stdio.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_intmax_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_nl_item.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint16_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint32_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint64_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_uint8_t.h.blob  (+376 more)
dependencies/glfw-3.3/: Makefile  cmake_install.cmake  (+1 more)
src/: main.cpp
(+32 files in other folders)
